--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "skud_engine"
+name = "koi"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,3 +7,8 @@ edition = "2021"
 
 [dependencies]
 rand = "0.8.5"
+
+[profile.perf]
+inherits = "dev"
+opt-level = 3
+codegen-units = 64
