--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,5 @@ edition = "2021"
 [dependencies]
 rand = "0.8.5"
 
-[profile.perf]
-inherits = "dev"
-opt-level = 3
-codegen-units = 64
+[profile.release]
+debug = true
